--- a/social media data analysis.ipynb
+++ b/social media data analysis.ipynb
@@ -13,7 +13,7 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "Analyzing social media data with Python"
+      "Analyzing social media(Instagram) data with Python & NLP"
      ]
     },
     {
@@ -21,7 +21,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Fletcher Heisler"
+      "By: Sunil Kumar"
      ]
     },
     {
@@ -61,7 +61,7 @@
      "level": 3,
      "metadata": {},
      "source": [
-      "[github.com/fheisler](https://github.com/fheisler)"
+      ""
      ]
     },
     {
@@ -69,7 +69,7 @@
      "level": 3,
      "metadata": {},
      "source": [
-      "[@fheisler](http://twitter.com/fheisler)"
+      ""
      ]
     },
     {
